Fix chat messages stretching the window.

--- a/src/app/components/chat/window/window.styl
+++ b/src/app/components/chat/window/window.styl
@@ -143,6 +143,8 @@ $chat-room-window-padding = 15px
 	position: relative
 	margin-bottom: 3px
 	word-wrap: break-word
+	word-break: break-all
+	hyphens: auto
 	line-height: $font-size-small * 1.25
 
 	&-avatar
